# xml_iterator

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  benchmark.py  benchmark_real_world.py  pyproject.toml  pytest.ini
.github/workflows/: CI.yml
examples/: example_xml_iter.py
src/: lib.rs
tests/: README.md  __init__.py  test_basic.py  test_performance.py  test_xmltodict.py
