[package]
name = "xml_iterator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "xml_iterator"
crate-type = ["cdylib"]

[dependencies]
encoding_rs = "0.8.31"
encoding_rs_io = "0.1.7"
pyo3 = { version = "0.17.1", features = ["extension-module"] }
quick-xml = "0.26.0"
