[build-system]
requires = ["maturin>=1.9.3"]
build-backend = "maturin"

[project]
name = "xml_iterator"
dynamic = ["version"]  # Specify that version is dynamic
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "xmltodict",  # For compatibility tests
]


