[build-system]
requires = ["maturin>=1.9.3"]
build-backend = "maturin"

[project]
name = "xml_iterator"
description = "XML parser with streaming iterator interface, built in Rust with Python bindings"
dynamic = ["version"]  # Specify that version is dynamic
requires-python = ">=3.7"
homepage = "https://github.com/cottrell/xml_iterator"
repository = "https://github.com/cottrell/xml_iterator"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "xmltodict",  # For compatibility tests
]


